--- a/app/views/orbituarysites/show.html.erb
+++ b/app/views/orbituarysites/show.html.erb
@@ -50,16 +50,24 @@
   </ul>
   <div class="tab-content">
     <div class="tab-pane active" id="tab1">
-      <p>I'm in Section 1.</p>
+      <p>I'm in Section 1.
+        <a class="btn btn-primary" href="/notice_displays/new">Post Notice</a>
+      </p>
     </div>
     <div class="tab-pane" id="tab2">
-      <p>Howdy, I'm in Section 2.</p>
+      <p>Howdy, I'm in Section 2.
+      <a class="btn btn-primary" href="/histories/new">Post Notice</a>
+      </p>
     </div>
     <div class="tab-pane" id="tab3">
-      <p>I'm in Section 3.</p>
+      <p>I'm in Section 3.
+      <a class="btn btn-primary" href="/memories/new">Post Notice</a>
+      </p>
     </div>
     <div class="tab-pane" id="tab4">
-      <p>I'm in Section 4.</p>
+      <p>I'm in Section 4.
+              <a class="btn btn-primary" href="/condolences/new">Post Notice</a>
+      </p>
     </div>
     <div class="tab-pane" id="tab5">
       <p>I'm in Section 5.</p>
