--- a/app/views/memories/_form.html.erb
+++ b/app/views/memories/_form.html.erb
@@ -13,11 +13,11 @@
 
   <div class="field">
     <%= f.label :body %><br />
-    <%= f.text_field :body %>
+    <%= f.cktext_area :body, :ckeditor => {:language => "en"} %>
   </div>
   <div class="field">
-    <%= f.label :orbituarysite_id %><br />
-    <%= f.number_field :orbituarysite_id %>
+    <% f.label :orbituarysite_id %><br />
+    <%= f.hidden_field :orbituarysite_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
