--- a/app/views/condolences/_form.html.erb
+++ b/app/views/condolences/_form.html.erb
@@ -17,7 +17,8 @@
   </div>
   <div class="field">
     <%= f.label :country %><br />
-    <%= f.text_field :country %>
+    <%# f.text_field :country %>
+    <%= country_select "condolence", :country %>
   </div>
   <div class="field">
     <%= f.label :address %><br />
@@ -29,11 +30,11 @@
   </div>
   <div class="field">
     <%= f.label :share_content %><br />
-    <%= f.text_field :share_content %>
+    <%= f.cktext_area :share_content, :ckeditor => {:language => "en"} %>
   </div>
   <div class="field">
-    <%= f.label :orbituarysite_id %><br />
-    <%= f.number_field :orbituarysite_id %>
+    <% f.label :orbituarysite_id %><br />
+    <%= f.hidden_field :orbituarysite_id %>
   </div>
   <div class="actions">
     <%= f.submit %>
