--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,14 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body>
+    <div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=580493612010185";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
     <div class="navbar navbar-fluid-top">
       <div class="navbar-inner">
@@ -49,10 +57,27 @@
           <a class="brand" href="#"><%= image_tag('ninaivu_logo.png') %></a>
           <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Orbituary site", new_orbituarysite_path  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
+              <li class="navbar-text"><%# link_to "Create Orbituary site", new_orbituarysite_path :data-toggle => "modal" href="#myModal2"  %>
+                <a data-toggle="modal" href="#myModal6" href="/condolences/new">Create Orbituary site</a>
+              </li>
             </ul>
+  <div class="modal fade hide" id="myModal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title">Modal title</h4>
+        </div>
+        <div class="modal-body">
+         <%= render 'orbituarysites/form' , :remote => true %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
 
 
             <%= menu_group :pull => :right do %>
@@ -60,6 +85,9 @@
             <%= link_to('Logout', destroy_user_session_path) %>
         <% else %>
             <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
+            <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:twitter) %>
+            <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
+
 
         <% end %>
     <% end %>
