--- a/app/views/orbiturer_share_images/show.html.erb
+++ b/app/views/orbiturer_share_images/show.html.erb
@@ -2,8 +2,7 @@
 
 <p>
   <b>Orbiturer other images:</b>
-  <%= @orbiturer_share_image.orbiturer_other_images %>
-</p>
+    <%= image_tag(@orbiturer_share_image.orbiturer_other_images_url) if @orbiturer_share_image.orbiturer_other_images? %></p>
 
 <p>
   <b>Orbituarysite:</b>
