--- a/app/views/notice_displays/_form.html.erb
+++ b/app/views/notice_displays/_form.html.erb
@@ -28,13 +28,14 @@
   </div>
   <div class="field">
     <% f.label :orbituarysite_id %><br />
-    <%= f.hidden_field :orbituarysite_id %>
+    <%= f.number_field :orbituarysite_id %>
   </div>
-  <%= f.fields_for :notice_event_contacts do |builder| %>
-   <%# render 'notice_displays/event_contact', :f => builder %>
+     <%= render 'notice_event_contacts/form' %>
+  <% f.fields_for :notice_event_contacts do |builder| %>
+   <%= render 'notice_event_contacts/form', :f => builder %>
   <% end %>
-  <%= f.fields_for :notice_event_places do |builder| %>
-   <%# render 'notice_displays/event_place', :f => builder %>
+  <% f.fields_for :notice_event_places do |builder| %>
+   <%= render 'notice_event_places/form', :f => builder %>
   <% end %>
   
   <div class="actions">
