changes to orbituary show page

--- a/app/views/orbituarysites/show.html.erb
+++ b/app/views/orbituarysites/show.html.erb
@@ -204,7 +204,7 @@
 
     </div>
     <div class="tab-pane" id="tab5">
-      <p>            <%= image_tag('padankal.png') %></p>
+      <p><%# image_tag('padankal.png') %></p>
       <p>
       <% if !@orbituarysite.orbiturer_share_images.nil? %> <div class="well"><% @orbituarysite.orbiturer_share_images.each do |f| %> <%= image_tag(f.orbiturer_other_images_url(:thumb))  %><% end %></div><% end %>
         <a data-toggle="modal" href="#myModal5" class="btn btn-primary" href="/orbiturer_share_images/new">Post Notice</a>
