--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -67,3 +67,19 @@ div {
     list-style: square;
   }
 }
+
+.line-break
+{
+  word-wrap:break-word;
+  height:57px;
+  overflow:hidden;
+
+}
+
+.margin
+{
+  margin-left:0px !important;
+  margin-right:8px;
+  margin-top:10px;
+}
+
