--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,6 @@
  *= require bootstrap_and_overrides
  *= require gmaps4rails
  *= require datepicker
+ *= require colorbox-rails
  *= require_tree .
  */
