--- a/app/views/notice_displays/_event_contact.html.erb
+++ b/app/views/notice_displays/_event_contact.html.erb
@@ -1,5 +1,5 @@
   <div class="field">
-    <%= f.label :name %><br />
+    <%= f.label "பெயர் *" %><br />
     <%= f.text_field :name %>
   </div>
   <div class="field">
@@ -7,11 +7,11 @@
     <%= f.text_field :country %>
   </div>
   <div class="field">
-    <%= f.label :mobile %><br />
+    <%= f.label "கைத் தொலைபேசி" %><br />
     <%= f.text_field :mobile %>
   </div>
   <div class="field">
-    <%= f.label :telephone %><br />
+    <%= f.label "தொலைபேசி எண்" %><br />
     <%= f.text_field :telephone %>
   </div>
   <div class="field">
