--- a/app/views/notice_displays/_form.html.erb
+++ b/app/views/notice_displays/_form.html.erb
@@ -19,7 +19,7 @@
     </select>
   </div>
   <div class="field">
-    <%= f.label :message %><br />
+    <%= f.label "செய்தி" %><br />
     <%= f.cktext_area :message, :ckeditor => {:language => "en"} %>
   </div>
   <div class="field">
