--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,13 +38,13 @@
   </head>
   <body>
     <div id="fb-root"></div>
-<script>(function(d, s, id) {
-  var js, fjs = d.getElementsByTagName(s)[0];
-  if (d.getElementById(id)) return;
-  js = d.createElement(s); js.id = id;
-  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=580493612010185";
-  fjs.parentNode.insertBefore(js, fjs);
-}(document, 'script', 'facebook-jssdk'));</script>
+      <script>(function(d, s, id) {
+        var js, fjs = d.getElementsByTagName(s)[0];
+        if (d.getElementById(id)) return;
+        js = d.createElement(s); js.id = id;
+        js.src = "//connect.facebook.net/en_US/all.js#xfbml=1&appId=580493612010185";
+        fjs.parentNode.insertBefore(js, fjs);
+      }(document, 'script', 'facebook-jssdk'));</script>
 
     <div class="navbar navbar-fluid-top">
       <div class="navbar-inner">
@@ -55,43 +55,42 @@
             <span class="icon-bar"></span>
           </a>
           <a class="brand" href="#"><%= image_tag('ninaivu_logo.png') %></a>
-          <div class="container-fluid nav-collapse">
-            <ul class="nav">
-              <li class="navbar-text"><%# link_to "Create Orbituary site", new_orbituarysite_path :data-toggle => "modal" href="#myModal2"  %>
-                <a data-toggle="modal" href="#myModal6" href="/condolences/new">Create Orbituary site</a>
-              </li>
-            </ul>
-  <div class="modal fade hide" id="myModal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-          <h4 class="modal-title">Modal title</h4>
-        </div>
-        <div class="modal-body">
-        <% if user_signed_in? %>
-          <%= render 'orbituarysites/form' , :remote => true %>
-        <% else %>
-          Please sign in to to create a new site
-          <% end %>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-          <button type="button" class="btn btn-primary">Save changes</button>
-        </div>
-      </div><!-- /.modal-content -->
-    </div><!-- /.modal-dialog -->
-  </div><!-- /.modal -->
+            <div class="container-fluid nav-collapse">
+              <ul class="nav">
+                <li class="navbar-text"><%# link_to "Create Orbituary site", new_orbituarysite_path :data-toggle => "modal" href="#myModal2"  %>
+                  <a data-toggle="modal" href="#myModal6" href="/condolences/new"><button class="btn btn-default">Create Orbituary site</button></a>
+                </li>
+              </ul>
+            <div class="modal fade hide" id="myModal6" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+              <div class="modal-dialog">
+                <div class="modal-content">
+                  <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Please Sign in</h4>
+                  </div>
+                  <div class="modal-body">
+                    <% if user_signed_in? %>
+                      <%= render 'orbituarysites/form' , :remote => true %>
+                    <% else %>
+                      <div class="span3 social_button">
+                        <p><strong>Please sign in to to create a new site</p></strong>
+                        <p><%= link_to raw("<i class=\"icon-facebook\"> | Sign in with Facebook</i>"), user_omniauth_authorize_path(:facebook),:class => "btn btn-facebook"%></p>
+                        <p><%= link_to raw("<i class=\"icon-twitter\"> | Sign in with Twitter</i>"), user_omniauth_authorize_path(:twitter),:class => "btn btn-twitter"%></p>
+                        <p><%= link_to raw("<i class=\"icon-google-plus\"> | Sign in with Google</i>"), user_omniauth_authorize_path(:google_oauth2),:class => "btn btn-google-plus" %></p>
+                      </div>
+                      <% end %>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal">Close</button>
+                  </div>
+                </div><!-- /.modal-content -->
+              </div><!-- /.modal-dialog -->
+            </div><!-- /.modal -->
 
 
             <%= menu_group :pull => :right do %>
-        <% if current_user %>
-            <%= link_to('Logout', destroy_user_session_path) %>
-        <% else %>
-            <%= link_to "Sign in with Facebook", user_omniauth_authorize_path(:facebook) %>
-            <%= link_to "Sign in with Twitter", user_omniauth_authorize_path(:twitter) %>
-            <%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
-
+        <% if user_signed_in? %>
+            <%= link_to('Logout', destroy_user_session_path) %>        
 
         <% end %>
     <% end %>
