--- a/app/views/notice_displays/_event_place.html.erb
+++ b/app/views/notice_displays/_event_place.html.erb
@@ -18,3 +18,7 @@
     <%= f.label :city %><br />
     <%= f.text_field :city %>
   </div>
+  <div class="field">
+    <%= f.label :notice_display_id %><br />
+    <%= f.number_field :notice_display_id %>
+  </div>  
