show page changes

--- a/app/views/orbituarysites/show.html.erb
+++ b/app/views/orbituarysites/show.html.erb
@@ -8,6 +8,7 @@
 <p></p>
 <p>
   <%= image_tag(@orbituarysite.orbiturerimage_url) if @orbituarysite.orbiturerimage? %>
+  <%= image_tag('flower_frames_5.png') %>
 </p>
 <h4 class="center">மண்ணில் - விண்ணில்</h4>
 <h4 class="center">
