changes to timelines and form in notice display

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -12,5 +12,6 @@
  *= require bootstrap_and_overrides
  *= require datepicker
  *= require colorbox-rails
+ *= require timelineJS/timeline
  *= require_tree .
  */
