--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -114,3 +114,18 @@ background-color: #01538d \9;
 		font-size:15px;
 	}
 }
+
+.image_left_side {
+  position:absolute;
+  margin-left: 20px;
+  margin-right:20px;
+  float:none;
+  width:440px;
+  height:620px;
+}
+
+.left_side_frame {
+  position: relative;
+  margin-left: 20px;
+}
+  
