--- a/app/views/notice_event_places/show.html.erb
+++ b/app/views/notice_event_places/show.html.erb
@@ -49,7 +49,7 @@
   <b>Notice display:</b>
   <%= @notice_event_place.notice_display_id %>
 </p>
-
+<%= @notice_event_place_maps.to_s %>
 <%= gmaps4rails(@notice_event_place_maps) %>
 
 <%= link_to 'Edit', edit_notice_event_place_path(@notice_event_place) %> |
