--- a/app/views/orbituarysites/show.html.erb
+++ b/app/views/orbituarysites/show.html.erb
@@ -1,3 +1,4 @@
+<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 <p id="notice"><%= notice %></p>
 <div class="span12">
   <div class="span5 notice">
@@ -7,8 +8,10 @@
 </h1>
 <p></p>
 <p>
-  <%= image_tag(@orbituarysite.orbiturerimage_url) if @orbituarysite.orbiturerimage? %>
-  <%= image_tag('flower_frames_5.png') %>
+  <a href="#">
+  <%= image_tag(@orbituarysite.orbiturerimage_url, :class => "image_left_side") if @orbituarysite.orbiturerimage? %>
+  <%= image_tag('flower_frames_5.png', :class => "left_side_frame") %>
+  </a>
 </p>
 <h4 class="center">மண்ணில் - விண்ணில்</h4>
 <h4 class="center">
@@ -41,7 +44,7 @@
 </p>
 
 <a href="https://twitter.com/share" class="twitter-share-button" data-url="http://localhost:3000/orbituarysites/1" data-text=<%= @orbituarysite.name %> data-via="anbublacky">Tweet</a>
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+<script>/*!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');*/</script>
 
 <div class="fb-like" data-href="http://notice.tamil.com" data-width="450" data-layout="button_count" data-show-faces="true" data-send="false"></div>
 
@@ -54,22 +57,23 @@
     <li><a href="#tab3" data-toggle="tab">நினைவலைகள்</a></li>
     <li><a href="#tab4" data-toggle="tab">ஆறுதல்கள்</a></li>
     <li><a href="#tab5" data-toggle="tab">படங்கள்</a></li>
+    <li><a href="#tab6" data-toggle="tab">Timeline</a></li>
   </ul>
   <div class="tab-content">
     <div class="tab-pane active" id="tab1">
-    <p>            <%= image_tag('arivithalkal.png') %></p>
+    <p><%= image_tag('arivithalkal.png') %></p>
     <p>
-      <% if @orbituarysite.notice_display.count < 1 %><a data-toggle="modal" href="#myModal1" class="btn btn-primary" href="/notice_displays/new">Post Notice</a><% end %>
       <% if @orbituarysite.notice_display.count == 1 %><a data-toggle="modal" href="#myModal11" class="btn btn-primary" href="/notice_displays/new">Edit Notice</a><% end %>
+      <% if @orbituarysite.notice_display.count < 1 %><a data-toggle="modal" href="#myModal1" class="btn btn-primary" href="/notice_displays/new">Post Notice</a><% end %>
     </p>
-    <p><% if !@orbituarysite.notice_display.nil? %>
+    <% if !@orbituarysite.notice_display.nil? %><div class="well">
       <% @orbituarysite.notice_display.each do |f| %>
-      <div class="well"><%= raw(f.message) %></div>
+      <%= raw(f.message) %>
       <% end %>
-      <% end %></p>
-        <p><% if !@orbituarysite.notice_display.nil? %>
+      <% end %></div>
+        <p><div class="well"><% if !@orbituarysite.notice_display.nil? %>
           <% @orbituarysite.notice_display.each do |f| %>
-          <div class="well"><%= raw(f.message) %></div>
+          <%= raw(f.message) %>
           <% f.notice_event_places.each do |plac| %>
           <%= plac.event_type %>
           <%= plac.country %>
@@ -79,7 +83,31 @@
           <%= plac.county %>
           <%= plac.eventdate %>
           <%= plac.eventtime %>
+          <%= plac.latitude %>
+          <%= plac.longitude %>
+          <%# @notice_event_place_maps = f.to_gmaps4rails %>
+          <%# plac.to_gmaps4rails %>
+          <div id="map-canvas"></div>
+          
+          
+          <script>
+            var map;
+            function initialize() {
+              var mapOptions = {
+                zoom: 8,
+                center: new google.maps.LatLng(<%= plac.latitude.to_f %>, <%= plac.longitude.to_f %>),
+                mapTypeId: google.maps.MapTypeId.ROADMAP
+              };
+              map = new google.maps.Map(document.getElementById('map-canvas'),
+                  mapOptions);
+            }
+            
+            google.maps.event.addDomListener(window, 'load', initialize);      
+          </script>
+          <%# gmaps4rails(plac.to_gmaps4rails) %>
+
           <% end %>
+          </div>
           <% end %>
           <% end %></p>
        <!-- Modal -->
@@ -232,7 +260,7 @@
             <% @orbituarysite.orbiturer_share_images.each do |f| %> 
               <div class="span5 margin">
               <div class="span4">
-                  <%= link_to image_tag(f.orbiturer_other_images_url(:thumb)), f.orbiturer_other_images_url, :data => { :colorbox => true }  %>
+                  <%# link_to image_tag(f.orbiturer_other_images_url(:thumb)), f.orbiturer_other_images_url, :data => { :colorbox => true, :id => f.id } %>
                 </div>
                 <div class="span7">
                   <b><%= f.title %></b><br />
@@ -264,8 +292,43 @@
       </div><!-- /.modal-content -->
     </div><!-- /.modal-dialog -->
   </div><!-- /.modal -->
-
     </div>
+  
+      <div class="tab-pane" id="tab6">
+      <p>Timeline</p>
+        <script>
+            $(document).ready(function() {
+                createStoryJS({
+                    type:       'timeline',
+                    width:      '800',
+                    height:     '600',
+                    source:     '<%= @orbituarysite.id %>',
+                    embed_id:   'my-timeline'
+                });
+            });
+        </script>
+        <br />
+         <div id="my-timeline"></div>
+      <p>
+        <a data-toggle="modal" href="#myModal7" class="btn btn-primary" href="/timelines/new">Post Notice</a>
+      </p>
+  <div class="modal fade hide" id="myModal7" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title">Timeline</h4>
+        </div>
+        <div class="modal-body">
+         <%= render 'timelines/form' , :remote => true %>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        </div>
+      </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+  </div><!-- /.modal -->
+</div>
   </div>
  </div>
 </div>
